updates order